Lab7/security_groups.tf
resource "aws_security_group" "pg_security_group" {
  name   = "rds_pg"
  vpc_id = aws_vpc.app.id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
